# workshop_duckb

./: Dockerfile  README.md  app.py  pyproject.toml
