[tool.poetry]
name = "workshop-duckdb"
version = "0.1.0"
description = ""
authors = ["Theo Lourenção <theo_lou@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^0.10.1"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
